[tool.poetry]
name = "wdi"
version = "0.1.0"
description = "IE670 Web Data Integration Project"
authors = ["Jonas Jakubassa <jakubassa@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
spotipy = "^2.23.0"
pandas = "^2.1.1"
keyring = "^24.2.0"
tqdm = "^4.66.1"
jsonpath-ng = "^1.6.0"
musicbrainzngs = "^0.7.1"
sqlite-utils = "^3.35.1"
mypy = "^1.6.1"
types-tqdm = "^4.66.0.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
